themes/Furnitown/assets/css/custom.css
/* ... */
.meta_author {
    font-size: 14px;
    color: #5d5a5a;
}
.blogd.text-xs-center {
    font-size: 15px;
    color: #5d5a5a;
    margin: 12px 0;
}
.meta_author i {
    margin-right: 5px;
}
.blog_mask .icon {
    border-radius: 50%;
    transform: translate(-50%, -50%);
    border: 2px solid #1a1a1a;
    display: inline-block;
    min-width: 35px;
    min-height: 35px;
    text-align: center;
    padding: 5px 0;
    margin: 0 5px;
}
.post_thumbnail{
    position: relative
}
.post_thumbnail:hover .blog_mask {
    opacity: 1;
    visibility: visible;
    z-index: 1;
    -webkit-transform: scale(1);
}
.blog_mask .icon:hover {
    background-color: #ee3333;
    color: #fff;
    border: 2px solid #ee3333;
}
.blog_mask_content{
    position: absolute;
    left: 20px;
    right: 0;
    margin: 0 auto;
    text-align: center;
    top: 50%;
}
.blog_mask .icon i {
    vertical-align: middle;
}
.blog_mask {
    opacity: 0;
    visibility: hidden;
    z-index: 0;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    transition: 0.4s ease;
    -webkit-transform: scale(0.8);
    background-color: rgba(255, 255, 255, 0.4);
    padding: 10px;
}
.sep{
    margin: 0 15px;
}
.btb{
    margin: 0 3px;
}
#blog .post_title{
    font-size: 20px;
    padding-bottom: 2px;
    margin: 1px 0;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    font-weight: 500;
    color: #ff4136;
}
.thumbnail_lightbox.icon {
    background-color: #ff4136;
    color: #fff;
    width: 35px;
    height: 35px;
    display: inline-block;
    border-radius: 5px;
    padding: 7px 0;
}
.thumbnail_lightbox.icon:hover{
    background-color: #222;
}
.post_title a{
    color: #ff4136;
}
.post_title a:hover{
    color: #222;
}
.read_more{
    text-transform: uppercase;
}
.post_content p{
    color: #5d5a5a;
    line-height: 22px;
    letter-spacing: 1px;
    margin-bottom: 20px;
    max-height: 20px;
    overflow: hidden;
}
.allbl .blog_post_content_top img{
    border-radius: 4px 4px 0 0
}
.allbl .blogc span,.allbl .blogc a{
    color: #a9a9a9;
    font-size: 12px;
}
.allbl .blog_post_content{
    margin-bottom: 15px;
}
#module-wbblog-single .allbl{
    padding: 15px 0;
    border: none;
}
.allbl .meta_author{
    color: #000;
}
.allbl .post_meta span{
    margin: 0 10px;
}
.allbl .content_more{
    margin-top: 10px;
}
.allbl .post_content {
    color: #555;
    font-size: 12px;
    line-height: 23px;
}
.allbl .post_content p{
    font-size: 13px;
    border-bottom: none;
    margin-bottom: 0
}
.allbl .content_more{
    padding: 0;
}
.allbl .post_title{
    padding: 0;
    min-height: auto;
    margin-bottom: 5px;
    margin-top: 10px;
    font-size: 16px;
    font-weight: 500;
}
.archb .post_thumbnail{
    position: relative;
}
.archb .post_thumbnail .material-icons{
    position: absolute;
    right: 10px;
    bottom: 10px;
}
.archb{
    margin-bottom: 20px;
}
#module-wbblog-single .post_title{
    font-size: 14px;
    text-transform: uppercase;
    letter-spacing: 2px;
    margin-top: 15px;
    min-height: auto;
    margin-bottom: 15px;
}
#module-wbblog-single .blog_post_content_top{
    margin-top: 0;
}
#module-wbblog-archive .allbl{
    background-color: #fff
}
#module-wbblog-archive .blog_post_content{
    margin-bottom: 20px;
    float: left;
    width: 100%;
}
#module-wbblog-archive .content_more a{
    text-decoration: none;
}
.post_d i{
    font-size: 14px;
    color: #bbb;
    margin-right: 10px;
}
.post_d a,.post_d span{
    color: #bbb;
    transition: 0.3s ease;
}
.post_d a:hover{
    color: #222;
}
.post_d .fa-eye{
    margin-left: 10px;
}
.post_d{
    margin-top: 15px;
    text-transform: capitalize;
    font-size: 12px;
}
.post_metas li{
    display: inline-block;
    direction: ltr;
}
.comment_list li{
    border-bottom: 1px solid #eaeaea;
    padding-bottom: 5px;
    margin-bottom: 0;
}
.comment_list li:last-child{
    border-bottom: none;
    padding-bottom: 0px;
    margin-bottom: 0px;
}
.allbl .meta_category{
    margin: 0 15px;
}
.wco{
    margin-left: 33px;
}
/* comment */
.commlist{
    background-color: #fff;
    margin-bottom: 15px;
    margin-top: 10px;
    border: 1px solid #eaeaea;
    border-radius: 4px;
}
.comment_content{
    padding: 10px 15px;
}
.fn{
    text-transform: uppercase;
    letter-spacing: 2px;
    margin: 0 7px;
}
.vcard img{
    height: 61px;
    width: 61px;
}
.comment_content i{
    font-size: 18px;
    padding-right: 15px;
    line-height: 30px;
}
.wco{
    margin-left: 38px;
    position: relative;
    top: 6px;
    margin-bottom: 10px;
    font-size: 12px;
    color: #777;
}
/* logo */
.logobg {
    margin-top: 50px;
}
#owl-logo {
    border: 1px solid #eee;
    border-radius: 5px;
    padding: 15px;

}
/* footer */
.foot-payment i {
    font-size: 22px;
    color: white;
}
.foot-payment i:hover {
    color: #ff4136;
}
.footlogo {
    margin-bottom: 30px;
}
#footer_contact .c-info{
    margin-top: 15px;
}
#footer_contact .icon svg {
    fill: white;
    margin-right: 8px;
    float: left;
    width: 25px;
    margin-top: 4px;
    font-size: 16px;
}
.ad {
    margin-left: 33px;
}
#footer {
    background-color: #033E8C;
    margin-top: 50px;
    padding-top: 40px;
}
.c-info,.links .h3, .links h3 a, .footleft h3{
    font-size: 16px;
    color: #003A96;
    font-family: 'Raleway Medium';
    text-transform: uppercase;
    font-weight: 500;
    margin-bottom: 15px;
    letter-spacing: 1px;
    display: block;
}
.footer-container li a, #footer .lnk_wishlist,#footer_contact{
    cursor: pointer;
    font-size: 14px;
    line-height: 30px;
    color: white;
    word-break: break-all;
}
.footer-container li a:hover, #footer .lnk_wishlist:hover,.foot-payment i:hover{
    color: #ffff00;
}
/* ... */

